[package]
name = "diesel_actix_janke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono"] }
actix-web = "4.2.1"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
chrono = "0.4.23"